--- a/02. Partie réglementaire/Article R223-2 - 25938795.md
+++ b/02. Partie réglementaire/Article R223-2 - 25938795.md
@@ -6,21 +6,26 @@ La déclaration valant saisie prévue à l'article L. 223-1 contient à peine de
 
 2° Le numéro d'immatriculation et la marque du véhicule saisi ; 
 
-3° La mention du titre exécutoire dont se prévaut le créancier ; 
-
-4° Le décompte distinct des sommes réclamées, en principal, frais et intérêts échus. 
+3° La mention du titre exécutoire dont se prévaut le créancier. 
 
 Cette déclaration est signifiée à l'autorité administrative mentionnée à l'article L. 223-1.
 
+**Nota:**
+
+Conformément à l'article 13 du décret n° 2012-783 du 30 mai 2012 les dispositions de l'article R. 223-2 entrent en vigueur à
+compter de la publication de l'arrêté du garde des sceaux, ministre de la justice, définissant, en application de l'article
+748-6 du code de procédure civile, les garanties que doivent présenter les procédés utilisés par les huissiers de justice
+pour signifier les actes par voie électronique et au plus tard le 1er septembre 2012.
+
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Décret n°92-755 du 31 juillet 1992 - art. 165 (Ab)
+	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-783 du 30 mai 2012 - art. 13
 
 	**Cité par**:
 
@@ -28,4 +33,4 @@ Cette déclaration est signifiée à l'autorité administrative mentionnée à l
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. L223-1 (V)
+	  - Code des procédures civiles d'exécution - art. L223-1
