--- a/02. Partie réglementaire/Article R223-3 - 25938797.md
+++ b/02. Partie réglementaire/Article R223-3 - 25938797.md
@@ -2,18 +2,26 @@
 
 A peine de caducité, la copie de cette déclaration est signifiée au débiteur dans les huit jours qui suivent. 
 
-L'acte reproduit les dispositions de l'article R. 223-4 et indique, en caractères très apparents, que les contestations sont
+L'acte de signification reproduit les dispositions de l'article R. 223-4 et contient le décompte distinct des sommes
+réclamées, en principal, frais et intérêts échus. Il indique en caractères très apparents que les contestations doivent être
 portées devant le juge de l'exécution du lieu où demeure le débiteur.
+
+**Nota:**
+
+Conformément à l'article 13 du décret n° 2012-783 du 30 mai 2012 les dispositions de l'article R. 223-3 entrent en vigueur à
+compter de la publication de l'arrêté du garde des sceaux, ministre de la justice, définissant, en application de l'article
+748-6 du code de procédure civile, les garanties que doivent présenter les procédés utilisés par les huissiers de justice
+pour signifier les actes par voie électronique et au plus tard le 1er septembre 2012.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Décret n°92-755 du 31 juillet 1992 - art. 166 (Ab)
+	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-783 du 30 mai 2012 - art. 13
 
 	**Cité par**:
 
@@ -21,4 +29,4 @@ portées devant le juge de l'exécution du lieu où demeure le débiteur.
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. R223-4 (V)
+	  - Code des procédures civiles d'exécution - art. R223-4
