--- a/02. Partie réglementaire/Article R162-1 - 25938442.md
+++ b/02. Partie réglementaire/Article R162-1 - 25938442.md
@@ -1,25 +1,35 @@
 # Article R162-1
 
 Pour l'application de l'article L. 162-1, en cas de diminution des sommes rendues indisponibles, l'établissement doit fournir
-un relevé de toutes les opérations qui ont affecté les comptes depuis le jour de la saisie inclusivement.
+un relevé de toutes les opérations qui ont affecté les comptes depuis le jour de la saisie inclusivement. 
 
 Ce relevé d'opérations est communiqué par lettre recommandée avec demande d'avis de réception au créancier saisissant au plus
-tard huit jours après l'expiration du délai de contre-passation.
+tard huit jours après l'expiration du délai de contre-passation. 
+
+Sous réserve des dispositions de l'article 748-7 du code de procédure civile, si l'acte de saisie est signifié par voie
+électronique, le tiers saisi communique le relevé par voie électronique dans ce même délai.
+
+**Nota:**
+
+Conformément à l'article 13 du décret n° 2012-783 du 30 mai 2012 les dispositions de l'article R. 162-1 entrent en vigueur à
+compter de la publication de l'arrêté du garde des sceaux, ministre de la justice, définissant, en application de l'article
+748-6 du code de procédure civile, les garanties que doivent présenter les procédés utilisés par les huissiers de justice
+pour signifier les actes par voie électronique et au plus tard le 1er septembre 2012.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°91-650 du 9 juillet 1991 - art. 47 al. 9 (Ab)
-	  - Décret n°92-755 du 31 juillet 1992 - art. 79 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-783 du 30 mai 2012 - art. 13
+
+	**Cite**:
+
+	  - Code de procédure civile - art. 748-7
+	  - Code des procédures civiles d'exécution - art. L162-1 (V)
 
 	**Cité par**:
 
