--- a/02. Partie réglementaire/Article R211-3 - 25938475.md
+++ b/02. Partie réglementaire/Article R211-3 - 25938475.md
@@ -1,39 +1,47 @@
 # Article R211-3
 
-A peine de caducité, la saisie est dénoncée au débiteur par acte d'huissier de justice dans un délai de huit jours.
+A peine de caducité, la saisie est dénoncée au débiteur par acte d'huissier de justice dans un délai de huit jours. 
 
-Cet acte contient à peine de nullité :
+Cet acte contient à peine de nullité : 
 
-1° Une copie du procès-verbal de saisie ;
+1° Une copie du procès-verbal de saisie et la reproduction des renseignements communiqués par le tiers saisi si l'acte a été
+signifié par voie électronique ; 
 
 2° En caractères très apparents, l'indication que les contestations doivent être soulevées, à peine d'irrecevabilité, dans le
 délai d'un mois qui suit la signification de l'acte par assignation, et la date à laquelle expire ce délai ainsi que
 l'indication que l'assignation est dénoncée par lettre recommandée avec demande d'avis de réception le même jour à l'huissier
-de justice ayant procédé à la saisie ;
+de justice ayant procédé à la saisie ; 
 
-3° La désignation de la juridiction devant laquelle les contestations peuvent être portées ;
+3° La désignation de la juridiction devant laquelle les contestations peuvent être portées ; 
 
 4° L'indication, en cas de saisie de compte, du montant de la somme à caractère alimentaire laissée à la disposition du
-débiteur en application de l'article R. 162-2 ainsi que du ou des comptes sur lesquels cette mise à disposition est opérée.
+débiteur en application de l'article R. 162-2 ainsi que du ou des comptes sur lesquels cette mise à disposition est opérée. 
 
 L'acte rappelle au débiteur qu'il peut autoriser par écrit le créancier à se faire remettre sans délai par le tiers saisi les
 sommes qui lui sont dues.
 
+**Nota:**
+
+Conformément à l'article 13 du décret n° 2012-783 du 30 mai 2012 les dispositions de l'article R. 211-3 entrent en vigueur à
+compter de la publication de l'arrêté du garde des sceaux, ministre de la justice, définissant, en application de l'article
+748-6 du code de procédure civile, les garanties que doivent présenter les procédés utilisés par les huissiers de justice
+pour signifier les actes par voie électronique et au plus tard le 1er septembre 2012.
+
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 58 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-783 du 30 mai 2012 - art. 13
 
 	**Cité par**:
 
 	  - Décret n°2016-230 du 26 février 2016 - art.
 	  - Code des procédures civiles d'exécution - art. R641-1 (VD)
+
+	**Cite**:
+
+	  - Code des procédures civiles d'exécution - art. R162-2
