--- a/02. Partie réglementaire/Article R211-4 - 25938479.md
+++ b/02. Partie réglementaire/Article R211-4 - 25938479.md
@@ -1,25 +1,36 @@
 # Article R211-4
 
 Le tiers saisi est tenu de fournir sur-le-champ à l'huissier de justice les renseignements prévus à l'article L. 211-3 et de
-lui communiquer les pièces justificatives.
+lui communiquer les pièces justificatives. 
 
-Il en est fait mention dans l'acte de saisie.
+Il en est fait mention dans l'acte de saisie. 
 
 Par dérogation au premier alinéa, lorsque la saisie est pratiquée entre les mains d'un comptable public, celui-ci dispose
 d'un délai de vingt-quatre heures pour fournir à l'huissier de justice les renseignements prévus à l'article L. 211-3 et lui
-communiquer les pièces justificatives.
+communiquer les pièces justificatives. 
+
+Si l'acte de saisie est signifié par voie électronique, le tiers saisi est tenu de communiquer à l'huissier de justice les
+renseignements et pièces justificatives mentionnés au premier alinéa au plus tard le premier jour ouvré suivant la
+signification, par voie électronique, sous réserve des dispositions prévues à l'article 748-7 du code de procédure civile.
+
+**Nota:**
+
+Conformément à l'article 13 du décret n° 2012-783 du 30 mai 2012 les dispositions de l'article R. 211-4 entrent en vigueur à
+compter de la publication de l'arrêté du garde des sceaux, ministre de la justice, définissant, en application de l'article
+748-6 du code de procédure civile, les garanties que doivent présenter les procédés utilisés par les huissiers de justice
+pour signifier les actes par voie électronique et au plus tard le 1er septembre 2012.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 59 (MMN)
-	  - Décret n°93-977 du 31 juillet 1993 - art. 5 al. 2 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-783 du 30 mai 2012 - art. 13
+
+	**Cite**:
+
+	  - Code de procédure civile - art. 748-7
+	  - Code des procédures civiles d'exécution - art. L211-3
