--- a/02. Partie réglementaire/Article R311-11 - 25938963.md
+++ b/02. Partie réglementaire/Article R311-11 - 25938963.md
@@ -4,7 +4,7 @@ Les délais prévus par les articles R. 321-1, R. 321-6, R. 322-6, R. 322-10 et 
 mois prévus par l'article R. 322-4 sont prescrits à peine de caducité du commandement de payer valant saisie. 
 
 Toute partie intéressée peut demander au juge de l'exécution de déclarer la caducité et d'ordonner, en tant que de besoin,
-qu'il en soit fait mention en marge de la copie du commandement publié au bureau des hypothèques. 
+qu'il en soit fait mention en marge de la copie du commandement publié au fichier immobilier. 
 
 Il n'est pas fait droit à la demande si le créancier poursuivant justifie d'un motif légitime. 
 
@@ -14,13 +14,13 @@ mesure d'invoquer en temps utile.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 12 (Ab)
+	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
 
 	**Cité par**:
 
@@ -28,6 +28,7 @@ mesure d'invoquer en temps utile.
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. R321-1 (V)
-	  - Code des procédures civiles d'exécution - art. R322-31 (V)
-	  - Code des procédures civiles d'exécution - art. R322-6 (V)
+	  - Code des procédures civiles d'exécution - art. R321-1
+	  - Code des procédures civiles d'exécution - art. R322-31
+	  - Code des procédures civiles d'exécution - art. R322-4
+	  - Code des procédures civiles d'exécution - art. R322-6
