--- a/02. Partie réglementaire/Article R321-10 - 25938998.md
+++ b/02. Partie réglementaire/Article R321-10 - 25938998.md
@@ -1,6 +1,6 @@
 # Article R321-10
 
-Dans les cas prévus à l'article R. 321-8 et au premier alinéa de l'article R. 321-9, le conservateur des hypothèques
+Dans les cas prévus à l'article R. 321-8 et au premier alinéa de l'article R. 321-9, le service de la publicité foncière
 mentionne le ou les actes qui ne sont pas publiés en marge de la copie du précédent commandement publié dans l'ordre de leur
 présentation, avec les nom, prénom et domicile du ou des nouveaux poursuivants ou, s'il s'agit d'une personne morale, sa
 dénomination et son siège social ainsi que l'indication de l'avocat qui le ou les représente. 
@@ -13,22 +13,18 @@ La radiation de la saisie ne peut être opérée sans le consentement des créan
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 22 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. R321-8 (V)
-	  - Code des procédures civiles d'exécution - art. R321-9 (V)
+	  - Code des procédures civiles d'exécution - art. R321-8
+	  - Code des procédures civiles d'exécution - art. R321-9
 
 	**Cité par**:
 
