--- a/02. Partie réglementaire/Article R321-2 - 25938976.md
+++ b/02. Partie réglementaire/Article R321-2 - 25938976.md
@@ -1,18 +1,14 @@
 # Article R321-2
 
-Lorsque la saisie porte sur des immeubles situés dans le ressort de plusieurs bureaux des hypothèques, il est établi un
-commandement de payer par ressort.
+Lorsque la saisie porte sur des immeubles situés dans le ressort de plusieurs services de la publicité foncière, il est
+établi un commandement de payer par ressort.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 14 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
