--- a/02. Partie réglementaire/Article R321-21 - 25939034.md
+++ b/02. Partie réglementaire/Article R321-21 - 25939034.md
@@ -2,21 +2,17 @@
 
 A l'expiration du délai prévu à l'article R. 321-20 et jusqu'à la publication du titre de vente, toute partie intéressée peut
 demander au juge de l'exécution de constater la péremption du commandement et d'ordonner la mention de celle-ci en marge de
-la copie du commandement publié au bureau des hypothèques.
+la copie du commandement publié   au fichier immobilier.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 33 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
 
 	**Cité par**:
 
@@ -24,4 +20,4 @@ la copie du commandement publié au bureau des hypothèques.
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. R321-20 (V)
+	  - Code des procédures civiles d'exécution - art. R321-20
