--- a/02. Partie réglementaire/Article R321-6 - 25938988.md
+++ b/02. Partie réglementaire/Article R321-6 - 25938988.md
@@ -1,17 +1,17 @@
 # Article R321-6
 
-Le commandement de payer valant saisie est publié au bureau des hypothèques du lieu de situation de l'immeuble dans un délai
-de deux mois à compter de sa signification.
+Le commandement de payer valant saisie est publié au fichier immobilier dans un délai de deux mois à compter de sa
+signification.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 18 (Ab)
+	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
 
 	**Cité par**:
 
