--- a/02. Partie réglementaire/Article R322-25 - 25939109.md
+++ b/02. Partie réglementaire/Article R322-25 - 25939109.md
@@ -6,7 +6,7 @@ radiation des inscriptions d'hypothèque et de privilège prises du chef du déb
 
 Le jugement ainsi rendu n'est pas susceptible d'appel. 
 
-Le conservateur des hypothèques qui procède à la publication du jugement en fait mention en marge de la publication de la
+Le service de la publicité foncière qui procède à la publication du jugement en fait mention en marge de la publication de la
 copie du commandement et procède aux radiations des inscriptions correspondantes. 
 
 A défaut de pouvoir constater la vente amiable, le juge ordonne la vente forcée dans les conditions prévues aux troisième et
@@ -14,18 +14,14 @@ quatrième alinéas de l'article R. 322-22.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 58 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. R322-22 (V)
+	  - Code des procédures civiles d'exécution - art. R322-22
