--- a/02. Partie réglementaire/Article R322-9 - 25939068.md
+++ b/02. Partie réglementaire/Article R322-9 - 25939068.md
@@ -1,24 +1,20 @@
 # Article R322-9
 
 La mention de la délivrance de l'assignation et des dénonciations est portée en marge de la copie du commandement de payer
-valant saisie publiée au bureau des hypothèques dans les huit jours de la dernière signification en date.
+valant saisie publiée   au fichier immobilier dans les huit jours de la dernière signification en date. 
 
 Du jour de cette mention, l'inscription du commandement ne peut plus être radiée que du consentement de tous les créanciers
 inscrits ou en vertu d'un jugement qui leur soit opposable.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 43 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
 
 	**Cité par**:
 
