--- a/02. Partie réglementaire/Article R321-7 - 25938990.md
+++ b/02. Partie réglementaire/Article R321-7 - 25938990.md
@@ -3,30 +3,30 @@
 Les formalités de publicité sont régies par le décret n° 55-22 du 4 janvier 1955 portant réforme de la publicité foncière et
 le décret n° 55-1350 du 14 octobre 1955 pris pour l'application de ce décret. 
 
-Lorsque l'exécution de la formalité de publication a été retardée en raison d'un rejet notifié par le conservateur des
-hypothèques, le délai de deux mois prévu à l'article R. 321-6 est augmenté du nombre de jours écoulés entre le dépôt du
-commandement au bureau des hypothèques et l'exécution de la formalité. La date du dépôt est constatée au registre prévu à
-l'article 2453 du code civil. 
+Lorsque l'exécution de la formalité de publication a été retardée en raison d'un rejet notifié par le service de la publicité
+foncière, le délai de deux mois prévu à l'article R. 321-6 est augmenté du nombre de jours écoulés entre le dépôt du
+commandement à ce service et l'exécution de la formalité. La date du dépôt est constatée au registre prévu à l'article 2453
+du code civil. 
 
-S'il est dans l'impossibilité d'y procéder à l'instant de la réquisition, le conservateur fait mention, sur le commandement
-qui lui est déposé, de la date du dépôt.
+S'il est dans l'impossibilité d'y procéder à l'instant de la réquisition, le service de la publicité foncière fait mention,
+sur le commandement qui lui est déposé, de la date du dépôt.
 
 **Liens relatifs à cet article**
 
 	**Cite**:
 
-	  - Décret n°55-22 du 4 janvier 1955 (V)
-	  - Décret n°55-1350 du 14 octobre 1955 (V)
-	  - Code civil - art. 2453 (VT)
-	  - Code des procédures civiles d'exécution - art. R321-6 (V)
+	  - Décret n°55-22 du 4 janvier 1955
+	  - Décret n°55-1350 du 14 octobre 1955
+	  - Code civil - art. 2453
+	  - Code des procédures civiles d'exécution - art. R321-6
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 19 (Ab)
+	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
 
 	**Cité par**:
 
