--- a/02. Partie réglementaire/Article R322-4 - 25939054.md
+++ b/02. Partie réglementaire/Article R322-4 - 25939054.md
@@ -1,23 +1,19 @@
 # Article R322-4
 
-Dans les deux mois qui suivent la publication au bureau des hypothèques du commandement de payer valant saisie, le créancier
-poursuivant assigne le débiteur saisi à comparaître devant le juge de l'exécution à une audience d'orientation.
+Dans les deux mois qui suivent la publication   au fichier immobilier du commandement de payer valant saisie, le créancier
+poursuivant assigne le débiteur saisi à comparaître devant le juge de l'exécution à une audience d'orientation. 
 
 L'assignation est délivrée dans un délai compris entre un et trois mois avant la date de l'audience.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 38 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
 
 	**Cité par**:
 
