--- a/02. Partie réglementaire/Article R322-63 - 25939218.md
+++ b/02. Partie réglementaire/Article R322-63 - 25939218.md
@@ -1,18 +1,14 @@
 # Article R322-63
 
-Le titre de vente est publié au bureau des hypothèques selon les règles prévues pour les ventes judiciaires, à la requête de
+Le titre de vente est publié   au fichier immobilier selon les règles prévues pour les ventes judiciaires, à la requête de
 l'acquéreur ou, à son défaut, du créancier poursuivant la distribution.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 91 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
