--- a/02. Partie réglementaire/Article R322-65 - 25939224.md
+++ b/02. Partie réglementaire/Article R322-65 - 25939224.md
@@ -1,20 +1,16 @@
 # Article R322-65
 
 Sur requête de l'adjudicataire, le juge de l'exécution, qui constate la purge des hypothèques et privilèges pris sur
-l'immeuble du chef du débiteur, ordonne la radiation des inscriptions correspondantes au bureau des hypothèques.
+l'immeuble du chef du débiteur, ordonne la radiation des inscriptions correspondantes   au fichier immobilier. 
 
 L'ordonnance n'est pas susceptible d'appel.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 93 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
