--- a/02. Partie réglementaire/Article R532-1 - 25939524.md
+++ b/02. Partie réglementaire/Article R532-1 - 25939524.md
@@ -1,22 +1,18 @@
 # Article R532-1
 
-L'inscription provisoire d'hypothèque est opérée par le dépôt au bureau des hypothèques de deux bordereaux dans les
+L'inscription provisoire d'hypothèque est opérée par le dépôt au service de la publicité foncière de deux bordereaux dans les
 conditions prévues par l'article 2428 du code civil. Elle contient, en outre, l'indication du capital de la créance et de ses
 accessoires.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 251 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
 
 	**Cité par**:
 
@@ -26,4 +22,4 @@ accessoires.
 
 	**Cite**:
 
-	  - Code civil - art. 2428 (M)
+	  - Code civil - art. 2428
