--- a/02. Partie réglementaire/Article R533-2 - 25939548.md
+++ b/02. Partie réglementaire/Article R533-2 - 25939548.md
@@ -1,28 +1,26 @@
 # Article R533-2
 
 La publicité définitive est opérée, pour l'hypothèque, conformément à l'article 2428 du code civil et, pour le nantissement
-du fonds de commerce, conformément aux articles L. 143-16 et R. 143-6 et suivants du code de commerce.
+du fonds de commerce, conformément aux articles L. 143-16 et R. 143-6 et suivants du code de commerce. 
 
-Il n'est dû qu'un seul salaire ou émolument pour les inscriptions provisoire et définitive.
+Il n'est dû qu'un seul émolument ou qu'une seule contribution de sécurité immobilière prévue à l'article 879 du code général
+des impôts pour les inscriptions provisoire et définitive.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 261 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
 
 	**Cite**:
 
-	  - Code de commerce - art. L143-16 (V)
-	  - Code civil - art. 2428 (M)
+	  - Code de commerce - art. L143-16
+	  - Code général des impôts, CGI. - art. 879
+	  - Code civil - art. 2428
 
 	**Cité par**:
 
