--- a/02. Partie réglementaire/Article R124-4 - 25938368.md
+++ b/02. Partie réglementaire/Article R124-4 - 25938368.md
@@ -8,33 +8,29 @@ l'indication qu'elle exerce une activité de recouvrement amiable ;
 2° Les nom ou dénomination sociale du créancier, son adresse ou son siège social ; 
 
 3° Le fondement et le montant de la somme due en principal, intérêts et autres accessoires, en distinguant les différents
-éléments de la dette, à l'exclusion des frais qui restent à la charge du créancier en application du troisième alinéa de
-l'article L. 111-8; 
+éléments de la dette, à l'exclusion des  frais qui restent à la charge du créancier en application du troisième alinéa de
+l'article L. 111-8 ;
 
 4° L'indication d'avoir à payer la somme due et les modalités de paiement de la dette ; 
 
-5° La reproduction des troisième et quatrième alinéas de l'article L. 111-8. 
+5° La reproduction des deuxième et troisième alinéas alinéas de l'article L. 111-8. 
 
 Les références et date d'envoi de la lettre mentionnée au premier alinéa sont rappelées à l'occasion de toute autre démarche
 auprès du débiteur en vue du recouvrement amiable.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°96-1112 du 18 décembre 1996 - art. 4 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2013-109 du 30 janvier 2013 - art. 7
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. L111-8 (V)
+	  - Code des procédures civiles d'exécution - art. L111-8
 
 	**Cité par**:
 
