--- a/02. Partie réglementaire/Article R221-31 - 25938647.md
+++ b/02. Partie réglementaire/Article R221-31 - 25938647.md
@@ -1,6 +1,6 @@
 # Article R221-31
 
-L'information prévue au troisième alinéa de l'article L. 221-1 est faite par écrit et comporte le nom et l'adresse de
+L'information prévue au troisième alinéa de l'article L. 221-3 est faite par écrit et comporte le nom et l'adresse de
 l'acquéreur éventuel ainsi que le délai dans lequel ce dernier s'offre à verser le prix proposé. 
 
 L'huissier de justice communique ces indications au créancier saisissant et aux créanciers opposants par lettre recommandée
@@ -13,17 +13,13 @@ l'article R. 221-30, augmenté s'il y a lieu du délai de quinze jours imparti a
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 108 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2013-109 du 30 janvier 2013 - art. 7
 
 	**Cité par**:
 
@@ -32,5 +28,5 @@ l'article R. 221-30, augmenté s'il y a lieu du délai de quinze jours imparti a
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. L221-1 (V)
-	  - Code des procédures civiles d'exécution - art. R221-30 (V)
+	  - Code des procédures civiles d'exécution - art. L221-3
+	  - Code des procédures civiles d'exécution - art. R221-30
