--- a/01. Partie législative/Article L111-8 - 25025657.md
+++ b/01. Partie législative/Article L111-8 - 25025657.md
@@ -6,25 +6,21 @@ débiteur, sauf s'il est manifeste qu'ils n'étaient pas nécessaires au moment 
 tranchées par le juge.
 
 Les frais de recouvrement entrepris sans titre exécutoire restent à la charge du créancier, sauf s'ils concernent un acte
-dont l'accomplissement est prescrit par la loi. Toute stipulation contraire est réputée non écrite, sauf disposition
-législative contraire.
+dont l'accomplissement est prescrit par la loi au créancier. Toute stipulation contraire est réputée non écrite, sauf
+disposition législative contraire.
 
 Cependant, le créancier qui justifie du caractère nécessaire des démarches entreprises pour recouvrer sa créance peut
 demander au juge de l'exécution de laisser tout ou partie des frais ainsi exposés à la charge du débiteur de mauvaise foi.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Loi n°91-650 du 9 juillet 1991 - art. 32 (VT)
-
 	**Codifié par**:
 
 	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
+	  - Loi n°2014-344 du 17 mars 2014 - art. 12
 
 	**Cité par**:
 
