--- a/01. Partie législative/Article L411-1 - 25026030.md
+++ b/01. Partie législative/Article L411-1 - 25026030.md
@@ -1,22 +1,18 @@
 # Article L411-1
 
-Sauf disposition spéciale, l'expulsion ou l'évacuation d'un immeuble ou d'un lieu habité ne peut être poursuivie qu'en vertu
-d'une décision de justice ou d'un procès-verbal de conciliation exécutoire et après signification d'un commandement d'avoir à
-libérer les locaux.
+Sauf disposition spéciale, l'expulsion d'un immeuble ou d'un lieu habité ne peut être poursuivie qu'en vertu d'une décision
+de justice ou d'un procès-verbal de conciliation exécutoire et après signification d'un commandement d'avoir à libérer les
+locaux.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°91-650 du 9 juillet 1991 - art. 61 (VT)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
+	  - Loi n°2014-366 du 24 mars 2014 - art. 89
 
 	**Cité par**:
 
