--- a/01. Partie législative/Article L412-6 - 25026048.md
+++ b/01. Partie législative/Article L412-6 - 25026048.md
@@ -2,12 +2,11 @@
 
 Nonobstant toute décision d'expulsion passée en force de chose jugée et malgré l'expiration des délais accordés en vertu de
 l'article L. 412-3, il est sursis à toute mesure d'expulsion non exécutée à la date du 1er novembre de chaque année jusqu'au
-15 mars de l'année suivante, à moins que le relogement des intéressés soit assuré dans des conditions suffisantes respectant
+31 mars de l'année suivante, à moins que le relogement des intéressés soit assuré dans des conditions suffisantes respectant
 l'unité et les besoins de la famille. 
 
-Les dispositions du premier alinéa ne sont toutefois pas applicables lorsque les personnes dont l'expulsion a été ordonnée
-sont entrées dans les locaux par voie de fait ou lorsque ceux-ci sont situés dans un immeuble ayant fait l'objet d'un arrêté
-de péril.
+Toutefois, le juge peut supprimer le bénéfice du sursis prévu au premier alinéa lorsque les personnes dont l'expulsion a été
+ordonnée sont entrées dans les locaux par voie de fait.
 
 **Liens relatifs à cet article**
 
@@ -15,13 +14,9 @@ de péril.
 
 	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
-
-	**Anciens textes**:
-
-	  - Code de la construction et de l'habitation. - art. L613-3 (VT)
+	  - Loi n°2014-366 du 24 mars 2014 - art. 25
 
 	**Cité par**:
 
@@ -33,4 +28,4 @@ de péril.
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. L412-3 (VD)
+	  - Code des procédures civiles d'exécution - art. L412-3
