--- a/01. Partie législative/Article L412-4 - 25026043.md
+++ b/01. Partie législative/Article L412-4 - 25026043.md
@@ -1,10 +1,13 @@
 # Article L412-4
 
-La durée des délais prévus à l'article L. 412-3 ne peut, en aucun cas, être inférieure à un mois ni supérieure à un an. Pour
-la fixation de ces délais, il est tenu compte de la bonne ou mauvaise volonté manifestée par l'occupant dans l'exécution de
-ses obligations, des situations respectives du propriétaire et de l'occupant, notamment en ce qui concerne l'âge, l'état de
-santé, la qualité de sinistré par faits de guerre, la situation de famille ou de fortune de chacun d'eux, les circonstances
-atmosphériques, ainsi que des diligences que l'occupant justifie avoir faites en vue de son relogement.
+La durée des délais prévus à l'article L. 412-3 ne peut, en aucun cas, être inférieure à trois mois ni supérieure à trois
+ans. Pour la fixation de ces délais, il est tenu compte de la bonne ou mauvaise volonté manifestée par l'occupant dans
+l'exécution de ses obligations, des situations respectives du propriétaire et de l'occupant, notamment en ce qui concerne
+l'âge, l'état de santé, la qualité de sinistré par faits de guerre, la situation de famille ou de fortune de chacun d'eux,
+les circonstances atmosphériques, ainsi que des diligences que l'occupant justifie avoir faites en vue de son relogement. Il
+est également tenu compte du droit à un logement décent et indépendant, des délais liés aux recours engagés selon les
+modalités prévues aux articles L. 441-2-3 et L. 441-2-3-1 du code de la construction et de l'habitation et du délai
+prévisible de relogement des intéressés.
 
 **Liens relatifs à cet article**
 
@@ -12,14 +15,11 @@ atmosphériques, ainsi que des diligences que l'occupant justifie avoir faites e
 
 	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
-
-	**Anciens textes**:
-
-	  - Code de la construction et de l'habitation. - art. L613-2 (VT)
+	  - Loi n°2014-366 du 24 mars 2014 - art. 27 (V)
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. L412-3 (VD)
+	  - Code de la construction et de l'habitation. - art. L441-2-3 (V)
+	  - Code des procédures civiles d'exécution - art. L412-3
