--- a/01. Partie législative/Article L412-5 - 25026045.md
+++ b/01. Partie législative/Article L412-5 - 25026045.md
@@ -1,16 +1,21 @@
 # Article L412-5
 
 Dès le commandement d'avoir à libérer les locaux, l'huissier de justice chargé de l'exécution de la mesure d'expulsion en
-informe le représentant de l'Etat dans le département en vue de la prise en compte de la demande de relogement de l'occupant
-dans le cadre du plan départemental d'action pour le logement des personnes défavorisées prévu par la loi n° 90-449 du 31 mai
-1990 visant à la mise en œuvre du droit au logement. A défaut, le délai avant l'expiration duquel l'expulsion ne peut avoir
-lieu est suspendu.
+saisit le représentant de l'Etat dans le département afin que celui-ci en informe la commission de coordination des actions
+de prévention des expulsions locatives prévue à l'article 7-2 de la loi n° 90-449 du 31 mai 1990 visant à la mise en œuvre du
+droit au logement, et qu'il informe le ménage locataire de la possibilité de saisir la commission de médiation en vue d'une
+demande de relogement au titre du droit au logement opposable. A défaut de saisine du représentant de l'Etat dans le
+département par l'huissier, le délai avant l'expiration duquel l'expulsion ne peut avoir lieu est suspendu. 
+
+La saisine du représentant de l'Etat dans le département par l'huissier et l'information de la commission de coordination des
+actions de prévention des expulsions locatives par le représentant de l'Etat dans le département peuvent s'effectuer par voie
+électronique, selon des modalités fixées par décret.
 
 **Liens relatifs à cet article**
 
-	**Cite**:
+	**Codifié par**:
 
-	  - Loi n°90-449 du 31 mai 1990
+	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
 	**Cité par**:
 
@@ -20,14 +25,6 @@ lieu est suspendu.
 	  - Code des procédures civiles d'exécution - art. L641-7 (VD)
 	  - Code des procédures civiles d'exécution - art. R412-2 (V)
 
-	**Anciens textes**:
+	**Modifié par**:
 
-	  - Loi n°91-650 du 9 juillet 1991 - art. 62 (VT)
-
-	**Codifié par**:
-
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
-
-	**Créé par**:
-
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
+	  - Loi n°2014-366 du 24 mars 2014 - art. 28
