--- a/01. Partie législative/Article L111-3 - 25025646.md
+++ b/01. Partie législative/Article L111-3 - 25025646.md
@@ -6,7 +6,7 @@ Seuls constituent des titres exécutoires :
 que les accords auxquels ces juridictions ont conféré force exécutoire ;
 
 2° Les actes et les jugements étrangers ainsi que les sentences arbitrales déclarés exécutoires par une décision non
-susceptible d'un recours suspensif d'exécution ;
+susceptible d'un recours suspensif d'exécution, sans préjudice des dispositions du droit de l'Union européenne applicables  ;
 
 3° Les extraits de procès-verbaux de conciliation signés par le juge et les parties ;
 
@@ -19,9 +19,9 @@ la loi attache les effets d'un jugement.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
+	**Codifié par**:
 
-	  - Loi n°91-650 du 9 juillet 1991 - art. 3 (VT)
+	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
 	**Cité par**:
 
@@ -38,10 +38,6 @@ la loi attache les effets d'un jugement.
 	  - Code des procédures civiles d'exécution - art. L111-4 (VD)
 	  - Code général des collectivités territoriales - art. D1611-24 (V)
 
-	**Codifié par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
-
-	**Créé par**:
-
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
+	  - Loi n°2015-177 du 16 février 2015 - art. 11 (V)
