--- a/01. Partie législative/Article L221-3 - 25025856.md
+++ b/01. Partie législative/Article L221-3 - 25025856.md
@@ -13,21 +13,17 @@ pour qu'ils soient vendus aux enchères publiques.
 La responsabilité du créancier ne peut pas être recherchée sauf si le refus d'autoriser la vente est inspiré par l'intention
 de nuire au débiteur.
 
-Le transfert de la propriété du bien est subordonné au versement de son prix.
+Le transfert de la propriété du bien est subordonné au paiement  de son prix.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°91-650 du 9 juillet 1991 - art. 52 (VT)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
+	  - Loi n°2015-177 du 16 février 2015 - art. 11 (V)
 
 	**Cité par**:
 
