--- a/01. Partie législative/Article L152-1 - 25025763.md
+++ b/01. Partie législative/Article L152-1 - 25025763.md
@@ -3,10 +3,10 @@
 Sous réserve des dispositions de l'article 6 de la loi n° 51-711 du 7 juin 1951 sur l'obligation, la coordination et le
 secret en matière de statistiques, les administrations de l'Etat, des régions, des départements et des communes, les
 entreprises concédées ou contrôlées par l'Etat, les régions, les départements et les communes, les établissements publics ou
-organismes contrôlés par l'autorité administrative doivent communiquer à l'huissier de justice chargé de l'exécution, porteur
-d'un titre exécutoire, les renseignements qu'ils détiennent permettant de déterminer l'adresse du débiteur, l'identité et
-l'adresse de son employeur ou de tout tiers débiteur ou dépositaire de sommes liquides ou exigibles et la composition de son
-patrimoine immobilier, à l'exclusion de tout autre renseignement, sans pouvoir opposer le secret professionnel.
+organismes contrôlés par l'autorité administrative doivent communiquer à l'huissier de justice chargé de l'exécution
+les renseignements qu'ils détiennent permettant de déterminer l'adresse du débiteur, l'identité et l'adresse de son employeur
+ou de tout tiers débiteur ou dépositaire de sommes liquides ou exigibles et la composition de son patrimoine immobilier, à
+l'exclusion de tout autre renseignement, sans pouvoir opposer le secret professionnel.
 
 **Liens relatifs à cet article**
 
@@ -14,17 +14,13 @@ patrimoine immobilier, à l'exclusion de tout autre renseignement, sans pouvoir 
 
 	  - Loi n°51-711 du 7 juin 1951 - art. 6
 
-	**Anciens textes**:
-
-	  - Loi n°91-650 du 9 juillet 1991 - art. 39 (VT)
-
 	**Codifié par**:
 
 	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
+	  - Loi n°2015-177 du 16 février 2015 - art. 11 (V)
 
 	**Cité par**:
 
@@ -35,5 +31,5 @@ patrimoine immobilier, à l'exclusion de tout autre renseignement, sans pouvoir 
 	  - Code des procédures civiles d'exécution - art. L612-2 (VD)
 	  - Code des procédures civiles d'exécution - art. R152-1 (V)
 	  - Livre des procédures fiscales - art. L132 A (V)
-	  - Livre des procédures fiscales - art. L151 A (M)
+	  - Livre des procédures fiscales - art. L151 A (V)
 	  - Livre des procédures fiscales - art. L162 A (V)
