--- a/01. Partie législative/Article L152-2 - 25025766.md
+++ b/01. Partie législative/Article L152-2 - 25025766.md
@@ -1,23 +1,18 @@
 # Article L152-2
 
 Les établissements habilités par la loi à tenir des comptes de dépôt doivent indiquer à l'huissier de justice chargé de
-l'exécution, porteur d'un titre exécutoire, si un ou plusieurs comptes, comptes joints ou fusionnés sont ouverts au nom du
-débiteur ainsi que les lieux où sont tenus les comptes, à l'exclusion de tout autre renseignement, sans pouvoir opposer le
-secret professionnel.
+l'exécution        si un ou plusieurs comptes, comptes joints ou fusionnés sont ouverts au nom du débiteur ainsi que les
+lieux où sont tenus les comptes, à l'exclusion de tout autre renseignement, sans pouvoir opposer le secret professionnel.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°91-650 du 9 juillet 1991 - art. 39 (VT)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
+	  - Loi n°2015-177 du 16 février 2015 - art. 11 (V)
 
 	**Cité par**:
 
