--- a/02. Partie réglementaire/Article R442-4 - 25939371.md
+++ b/02. Partie réglementaire/Article R442-4 - 25939371.md
@@ -1,37 +1,28 @@
 # Article R442-4
 
-Lorsqu'il est fait application de l'article R. 442-2, le greffe informe le demandeur des lieu, jour et heure de l'audience
-par lettre recommandée avec demande d'avis de réception, laquelle reproduit les dispositions des articles R. 121-6 à R.
-121-10. Copie de cette lettre est envoyée le même jour par lettre simple. 
-
-Lors de la présentation de la demande, le demandeur peut également être convoqué verbalement contre émargement. Dans ce cas,
-le greffe lui remet un avis comportant les indications prévues à l'alinéa précédent. 
+Lorsqu'il est fait application de l'article R. 442-2, le greffe avise par tous moyens le demandeur des lieu, jour et heure de
+l'audience. 
 
 Le défendeur est convoqué par lettre recommandée avec demande d'avis de réception. Cette lettre contient une copie de la
 demande, informe l'intéressé qu'il s'expose, faute de se présenter ou de faire connaître ses moyens de défense, à être jugé
-sur les seuls éléments fournis par le demandeur, et reproduit les dispositions des articles R. 121-6 à R. 121-10. Copie de la
-convocation est envoyée le même jour par lettre simple. Cette convocation peut être également faite verbalement contre
-émargement. 
+sur les seuls éléments fournis par le demandeur, et reproduit les dispositions des articles R. 121-6 à R. 121-10. Cette
+convocation peut être également faite verbalement contre émargement. 
 
 En cas de retour au greffe de la lettre recommandée qui n'a pu être remise à son destinataire, le greffier en informe le
 demandeur et l'invite à procéder comme il est dit à l'article 670-1 du code de procédure civile.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 19 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2015-282 du 11 mars 2015 - art. 15
 
 	**Cite**:
 
-	  - Code de procédure civile - art. 670-1 (V)
-	  - Code des procédures civiles d'exécution - art. R121-6 (V)
-	  - Code des procédures civiles d'exécution - art. R442-2 (V)
+	  - Code de procédure civile - art. 670-1
+	  - Code des procédures civiles d'exécution - art. R121-6
+	  - Code des procédures civiles d'exécution - art. R442-2
