--- a/02. Partie réglementaire/Article R125-2 - 32185862.md
+++ b/02. Partie réglementaire/Article R125-2 - 32185862.md
@@ -9,7 +9,7 @@ I.-La lettre recommandée avec demande d'avis de réception par laquelle l'huiss
 
 3° Le fondement et le montant de la somme due en principal et intérêts, en distinguant les différents éléments de la dette. 
 
-II.-Cette lettre reproduit les dispositions des articles L. 111-2 et L. 111-3 du présent code et des articles 1244-4 et 2238
+II.-Cette lettre reproduit les dispositions des articles L. 111-2, L. 111-3 et L. 125-1 du présent code et de l'article 2238
 du code civil. Elle rappelle à son destinataire qu'il peut accepter ou refuser cette procédure. 
 
 III.-La lettre indique que : 
@@ -30,6 +30,12 @@ sceaux, ministre de la justice.
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-285 du 9 mars 2016 - art. 1
+	  - Décret n°2016-285 du 9 mars 2016 - art. 4
+
+	**Cite**:
+
+	  - Code civil - art. 2238 (VD)
+	  - Code des procédures civiles d'exécution - art. L111-2 (V)
+	  - Code des procédures civiles d'exécution - art. L125-1 (VD)
