--- a/01. Partie législative/Article L111-3 - 25025646.md
+++ b/01. Partie législative/Article L111-3 - 25025646.md
@@ -1,19 +1,19 @@
 # Article L111-3
 
-Seuls constituent des titres exécutoires :
+Seuls constituent des titres exécutoires : 
 
 1° Les décisions des juridictions de l'ordre judiciaire ou de l'ordre administratif lorsqu'elles ont force exécutoire, ainsi
-que les accords auxquels ces juridictions ont conféré force exécutoire ;
+que les accords auxquels ces juridictions ont conféré force exécutoire ; 
 
 2° Les actes et les jugements étrangers ainsi que les sentences arbitrales déclarés exécutoires par une décision non
-susceptible d'un recours suspensif d'exécution, sans préjudice des dispositions du droit de l'Union européenne applicables ;
+susceptible d'un recours suspensif d'exécution, sans préjudice des dispositions du droit de l'Union européenne applicables ; 
 
-3° Les extraits de procès-verbaux de conciliation signés par le juge et les parties ;
+3° Les extraits de procès-verbaux de conciliation signés par le juge et les parties ; 
 
-4° Les actes notariés revêtus de la formule exécutoire ;
+4° Les actes notariés revêtus de la formule exécutoire ; 
 
-5° Le titre délivré par l'huissier de justice en cas de non-paiement d'un chèque ou en cas d'homologation de l'accord entre
-le créancier et le débiteur dans les conditions prévues à l' article 1244-4 du code civil ;
+5° Le titre délivré par l'huissier de justice en cas de non-paiement d'un chèque ou en cas d'accord entre le créancier et le
+débiteur dans les conditions prévues à l'article L. 125-1 ; 
 
 6° Les titres délivrés par les personnes morales de droit public qualifiés comme tels par la loi, ou les décisions auxquelles
 la loi attache les effets d'un jugement.
@@ -41,4 +41,10 @@ la loi attache les effets d'un jugement.
 
 	**Modifié par**:
 
-	  - Loi n°2015-990 du 6 août 2015 - art. 208
+	  - Ordonnance n°2016-131 du 10 février 2016 - art. 6
+	  - Loi n°2016-1547 du 18 novembre 2016 - art. 105 (V)
+	  - Loi n°2016-1547 du 18 novembre 2016 - art. 105
+
+	**Cite**:
+
+	  - Code des procédures civiles d'exécution - art. L125-1 (VD)
