--- a/02. Partie réglementaire/Article R125-1 - 32185864.md
+++ b/02. Partie réglementaire/Article R125-1 - 32185864.md
@@ -1,7 +1,6 @@
 # Article R125-1
 
-La procédure simplifiée de recouvrement des petites créances prévue à l'article 1244-4 du code civil peut être mise en
-œuvre : 
+La procédure simplifiée de recouvrement des petites créances prévue à l'article L125-1 peut être mise en œuvre : 
 
 1° Par un huissier de justice du ressort du tribunal de grande instance où le débiteur a son domicile ou sa résidence ; 
 
@@ -12,6 +11,10 @@ Le montant de la créance en principal et intérêts ne doit pas excéder 4 000 
 
 **Liens relatifs à cet article**
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2016-285 du 9 mars 2016 - art. 1
+	  - Décret n°2016-285 du 9 mars 2016 - art. 4
+
+	**Cite**:
+
+	  - Code des procédures civiles d'exécution - art. L125-1 (VD)
