--- a/02. Partie réglementaire/Article R125-1 - 32185864.md
+++ b/02. Partie réglementaire/Article R125-1 - 32185864.md
@@ -1,11 +1,7 @@
 # Article R125-1
 
-La procédure simplifiée de recouvrement des petites créances prévue à l'article L125-1 peut être mise en œuvre : 
-
-1° Par un huissier de justice du ressort du tribunal de grande instance où le débiteur a son domicile ou sa résidence ; 
-
-2° En cas de pluralité de tribunaux de grande instance dans le département où le débiteur a son domicile ou sa résidence, par
-un huissier de justice de l'un quelconque des ressorts de ces tribunaux. 
+La procédure simplifiée de recouvrement des petites créances prévue à l'article L. 125-1 peut-être mise en œuvre par un
+huissier de justice du ressort de la cour d'appel où le débiteur a son domicile ou sa résidence. 
 
 Le montant de la créance en principal et intérêts ne doit pas excéder 4 000 euros.
 
@@ -14,7 +10,3 @@ Le montant de la créance en principal et intérêts ne doit pas excéder 4 000 
 	**Modifié par**:
 
 	  - Décret n°2016-285 du 9 mars 2016 - art. 4
-
-	**Cite**:
-
-	  - Code des procédures civiles d'exécution - art. L125-1 (VD)
