--- a/01. Partie législative/Article L111-3 - 25025646.md
+++ b/01. Partie législative/Article L111-3 - 25025646.md
@@ -12,6 +12,9 @@ susceptible d'un recours suspensif d'exécution, sans préjudice des disposition
 
 4° Les actes notariés revêtus de la formule exécutoire ; 
 
+4° bis Les accords par lesquels les époux consentent mutuellement à leur divorce par acte sous signature privée contresignée
+par avocats, déposés au rang des minutes d'un notaire selon les modalités prévues à l'article 229-1 du code civil ; 
+
 5° Le titre délivré par l'huissier de justice en cas de non-paiement d'un chèque ou en cas d'accord entre le créancier et le
 débiteur dans les conditions prévues à l'article L. 125-1 ; 
 
@@ -41,10 +44,8 @@ la loi attache les effets d'un jugement.
 
 	**Modifié par**:
 
-	  - Ordonnance n°2016-131 du 10 février 2016 - art. 6
-	  - Loi n°2016-1547 du 18 novembre 2016 - art. 105 (V)
-	  - Loi n°2016-1547 du 18 novembre 2016 - art. 105
+	  - Loi n°2016-1547 du 18 novembre 2016 - art. 50
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. L125-1 (VD)
+	  - Code des procédures civiles d'exécution - art. L125-1
