--- a/01. Partie législative/Article L213-1 - 25025830.md
+++ b/01. Partie législative/Article L213-1 - 25025830.md
@@ -4,8 +4,15 @@ Tout créancier d'une pension alimentaire peut se faire payer directement le mon
 de sommes liquides et exigibles envers le débiteur de la pension. Il peut notamment exercer ce droit entre les mains de tout
 débiteur de sommes dues à titre de rémunération, ainsi que de tout dépositaire de fonds. 
 
-La demande en paiement direct est recevable dès qu'une échéance d'une pension alimentaire, fixée par une décision judiciaire
-devenue exécutoire, n'a pas été payée à son terme. 
+La demande en paiement direct est recevable dès qu'une échéance d'une pension alimentaire n'a pas été payée à son terme et
+qu'elle a été fixée par :
+
+1° Une décision judiciaire devenue exécutoire ; 
+
+2° Une convention de divorce par consentement mutuel prenant la forme d'un acte sous signature privée contresigné par
+avocats, déposé au rang des minutes d'un notaire ; 
+
+3° Un acte reçu en la forme authentique par un notaire.
 
 Cette procédure est applicable au recouvrement de la contribution aux charges du mariage prévues par l'article 214 du code
 civil. Elle l'est aussi au recouvrement de la rente prévue par l'article 276 et des subsides prévus par l'article 342 du même
@@ -13,23 +20,19 @@ code.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Loi n°73-5 du 2 janvier 1973 - art. 1 (VT)
-
 	**Codifié par**:
 
 	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
+	  - Loi n°2016-1547 du 18 novembre 2016 - art. 50
 
 	**Cite**:
 
 	  - Code civil - art. 214
-	  - Code civil - art. 276 (V)
-	  - Code civil - art. 342 (V)
+	  - Code civil - art. 276
+	  - Code civil - art. 342
 
 	**Cité par**:
 
