--- a/02. Partie réglementaire/Article R213-2 - 25938551.md
+++ b/02. Partie réglementaire/Article R213-2 - 25938551.md
@@ -4,18 +4,15 @@ La demande de paiement cesse de produire effet si l'huissier du créancier en no
 recommandée avec demande d'avis de réception.
 
 Elle prend fin aussi à la demande du débiteur, sur production d'un certificat délivré par un huissier attestant qu'un nouveau
-jugement a supprimé la pension alimentaire ou constatant qu'en vertu des dispositions légales la pension a cessé d'être due.
+jugement ou une nouvelle convention réglant les effets du divorce par consentement mutuel a supprimé la pension alimentaire
+ou constatant qu'en vertu des dispositions légales la pension a cessé d'être due.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°73-216 du 1 mars 1973 - art. 2 al. 3 et 4 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2016-1907 du 28 décembre 2016 - art. 11
