--- a/02. Partie réglementaire/Article R213-3 - 25938553.md
+++ b/02. Partie réglementaire/Article R213-3 - 25938553.md
@@ -1,23 +1,20 @@
 # Article R213-3
 
-Si une nouvelle décision change le montant de la pension alimentaire ou les modalités d'exécution de l'obligation, la demande
-de paiement direct se trouve de plein droit modifiée en conséquence à compter de la notification de la décision modificative
-qui est faite au tiers dans les conditions prévues aux premier et deuxième alinéas de l'article R. 213-1.
+Si une nouvelle convention ou décision change le montant de la pension alimentaire ou les modalités d'exécution de
+l'obligation, la demande de paiement direct se trouve de plein droit modifiée en conséquence à compter de la notification de
+la convention ou de la décision modificative qui est faite au tiers dans les conditions prévues aux premier et deuxième
+alinéas de l'article R. 213-1.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°73-216 du 1 mars 1973 - art. 3 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2016-1907 du 28 décembre 2016 - art. 11
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. R213-1 (V)
+	  - Code des procédures civiles d'exécution - art. R213-1
