--- a/01. Partie législative/Article L412-3 - 25026039.md
+++ b/01. Partie législative/Article L412-3 - 25026039.md
@@ -1,6 +1,6 @@
 # Article L412-3
 
-Le juge peut accorder des délais renouvelables aux occupants de locaux d'habitation ou à usage professionnel, dont
+Le juge peut accorder des délais renouvelables aux occupants de lieux habités ou de locaux  à usage professionnel, dont
 l'expulsion a été ordonnée judiciairement, chaque fois que le relogement des intéressés ne peut avoir lieu dans des
 conditions normales, sans que ces occupants aient à justifier d'un titre à l'origine de l'occupation. 
 
@@ -17,19 +17,15 @@ de la construction et de l'habitation n'a pas été suivie d'effet du fait du lo
 	**Cite**:
 
 	  - Loi n°48-1360 du 1er septembre 1948 - art. 19
-	  - Code de la construction et de l'habitation. - art. L442-4-1 (V)
+	  - Code de la construction et de l'habitation. - art. L442-4-1
 
 	**Codifié par**:
 
 	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
-
-	**Anciens textes**:
-
-	  - Code de la construction et de l'habitation. - art. L613-1 (VT)
+	  - Loi n°2017-86 du 27 janvier 2017 - art. 143
 
 	**Cité par**:
 
@@ -37,7 +33,7 @@ de la construction et de l'habitation n'a pas été suivie d'effet du fait du lo
 	  - Code de la construction et de l'habitation. - art. L613-1 (VD)
 	  - Code des procédures civiles d'exécution - art. L412-1 (V)
 	  - Code des procédures civiles d'exécution - art. L412-4 (V)
-	  - Code des procédures civiles d'exécution - art. L412-6 (M)
+	  - Code des procédures civiles d'exécution - art. L412-6 (V)
 	  - Code des procédures civiles d'exécution - art. L412-7 (VD)
 	  - Code des procédures civiles d'exécution - art. L612-4 (VD)
 	  - Code des procédures civiles d'exécution - art. L622-2 (T)
