--- a/01. Partie législative/Article L412-6 - 25026048.md
+++ b/01. Partie législative/Article L412-6 - 25026048.md
@@ -6,7 +6,7 @@ l'article L. 412-3, il est sursis à toute mesure d'expulsion non exécutée à 
 l'unité et les besoins de la famille. 
 
 Toutefois, le juge peut supprimer le bénéfice du sursis prévu au premier alinéa lorsque les personnes dont l'expulsion a été
-ordonnée sont entrées dans les locaux par voie de fait.
+ordonnée sont entrées dans les lieux par voie de fait.
 
 **Liens relatifs à cet article**
 
@@ -16,7 +16,7 @@ ordonnée sont entrées dans les locaux par voie de fait.
 
 	**Modifié par**:
 
-	  - Loi n°2014-366 du 24 mars 2014 - art. 25
+	  - Loi n°2017-86 du 27 janvier 2017 - art. 143
 
 	**Cité par**:
 
@@ -28,4 +28,4 @@ ordonnée sont entrées dans les locaux par voie de fait.
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. L412-3
+	  - Code des procédures civiles d'exécution - art. L412-3 (V)
