--- a/01. Partie législative/Article L412-1 - 25026034.md
+++ b/01. Partie législative/Article L412-1 - 25026034.md
@@ -1,30 +1,25 @@
 # Article L412-1
 
-Si l'expulsion porte sur un local affecté à l'habitation principale de la personne expulsée ou de tout occupant de son chef,
-elle ne peut avoir lieu qu'à l'expiration d'un délai de deux mois qui suit le commandement, sans préjudice des dispositions
-des articles L. 412-3 à L. 412-7. Toutefois, le juge peut, notamment lorsque les personnes dont l'expulsion a été ordonnée
-sont entrées dans les locaux par voie de fait ou lorsque la procédure de relogement effectuée en application de l'article L.
-442-4-1 du code de la construction et de l'habitation n'a pas été suivie d'effet du fait du locataire, réduire ou supprimer
-ce délai.
+Si l'expulsion porte sur un lieu habité par la personne expulsée ou par  tout occupant de son chef, elle ne peut avoir lieu
+qu'à l'expiration d'un délai de deux mois qui suit le commandement, sans préjudice des dispositions des articles L. 412-3 à
+L. 412-7. Toutefois, le juge peut, notamment lorsque les personnes dont l'expulsion a été ordonnée sont entrées dans les
+locaux par voie de fait ou lorsque la procédure de relogement effectuée en application de l'article L. 442-4-1 du code de la
+construction et de l'habitation n'a pas été suivie d'effet du fait du locataire, réduire ou supprimer ce délai.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Loi n°91-650 du 9 juillet 1991 - art. 62 (VT)
 
 	**Codifié par**:
 
 	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Ordonnance n°2011-1895 du 19 décembre 2011 - art.
+	  - Loi n°2017-86 du 27 janvier 2017 - art. 143
 
 	**Cite**:
 
-	  - Code de la construction et de l'habitation. - art. L442-4-1 (V)
-	  - Code des procédures civiles d'exécution - art. L412-3 (VD)
+	  - Code de la construction et de l'habitation. - art. L442-4-1
+	  - Code des procédures civiles d'exécution - art. L412-3
 
 	**Cité par**:
 
