--- a/02. Partie réglementaire/Article R213-8 - 25938563.md
+++ b/02. Partie réglementaire/Article R213-8 - 25938563.md
@@ -1,18 +1,14 @@
 # Article R213-8
 
 Le créancier d'aliments qui, de mauvaise foi, fait usage de la procédure de paiement direct peut être condamné à une amende
-civile d'un maximum de 3 000 €.
+civile d'un maximum de 10 000 euros.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°73-216 du 1 mars 1973 - art. 6 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2017-892 du 6 mai 2017 - art. 67
