--- a/02. Partie réglementaire/Article R321-3 - 25938978.md
+++ b/02. Partie réglementaire/Article R321-3 - 25938978.md
@@ -17,7 +17,7 @@ l'exécution pour voir statuer sur les modalités de la procédure ;
 la publicité foncière ; 
 
 6° L'indication que le commandement vaut saisie de l'immeuble et que le bien est indisponible à l'égard du débiteur à compter
-de la signification de l'acte et à l'égard des tiers à compter de la publication de celui-ci   au fichier immobilier ; 
+de la signification de l'acte et à l'égard des tiers à compter de la publication de celui-ci au fichier immobilier ; 
 
 7° L'indication que le commandement vaut saisie des fruits et que le débiteur en est séquestre ; 
 
@@ -39,7 +39,7 @@ juridictionnelle s'il remplit les conditions de ressources prévues par la loi n
 juridique et le décret n° 91-1266 du 19 décembre 1991 portant application de cette loi ; 
 
 13° L'indication, si le débiteur est une personne physique, que s'il s'estime en situation de surendettement, il a la faculté
-de saisir la commission de surendettement des particuliers instituée par l'article L. 331-1 du code de la consommation. 
+de saisir la commission de surendettement des particuliers instituée par l'article L. 712-1 du code de la consommation. 
 
 Si le créancier saisissant agit en vertu d'une transmission, à quelque titre que ce soit, de la créance contenue dans le
 titre exécutoire fondant les poursuites, le commandement vise l'acte de transmission à moins que le débiteur n'en ait été
@@ -57,7 +57,7 @@ que les sommes réclamées sont supérieures à celles qui sont dues au créanci
 
 	  - Loi n°91-647 du 10 juillet 1991
 	  - Décret n°91-1266 du 19 décembre 1991
-	  - Code de la consommation - art. L331-1
+	  - Code de la consommation - art. L712-1 (V)
 
 	**Codifié par**:
 
@@ -65,7 +65,7 @@ que les sommes réclamées sont supérieures à celles qui sont dues au créanci
 
 	**Modifié par**:
 
-	  - Décret n°2012-1462 du 26 décembre 2012 - art. 35
+	  - Décret n°2017-892 du 6 mai 2017 - art. 41
 
 	**Cité par**:
 
