--- a/02. Partie réglementaire/Article R121-22 - 25938342.md
+++ b/02. Partie réglementaire/Article R121-22 - 25938342.md
@@ -12,7 +12,7 @@ Le sursis à exécution n'est accordé que s'il existe des moyens sérieux d'ann
 à la cour.
 
 L'auteur d'une demande de sursis à exécution manifestement abusive peut être condamné par le premier président à une amende
-civile d'un montant maximum de 3 000 €, sans préjudice des dommages-intérêts qui pourraient être réclamés.
+civile d'un montant maximum de 10 000 euros, sans préjudice des dommages-intérêts qui pourraient être réclamés.
 
 La décision du premier président n'est pas susceptible de pourvoi.
 
@@ -24,7 +24,7 @@ La décision du premier président n'est pas susceptible de pourvoi.
 
 	**Modifié par**:
 
-	  - Décret n°2014-1338 du 6 novembre 2014 - art. 23
+	  - Décret n°2017-892 du 6 mai 2017 - art. 67
 
 	**Cité par**:
 
