--- a/02. Partie réglementaire/Article R153-1 - 25938432.md
+++ b/02. Partie réglementaire/Article R153-1 - 25938432.md
@@ -8,23 +8,19 @@ auxquelles l'huissier de justice a procédé et des difficultés d'exécution.
 Toute décision de refus de l'autorité compétente est motivée. Le défaut de réponse dans un délai de deux mois équivaut à un
 refus.
 
-Ce refus est porté à la connaissance du procureur de la République et du créancier par l'huissier de justice.
+Ce refus est porté à la connaissance du créancier par l'huissier de justice.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 50 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
-
-	  - Décret n°2012-783 du 30 mai 2012 - art.
-
 	**Cité par**:
 
 	  - Décret n°2014-1294 du 23 octobre 2014 - art. (VD)
 	  - Décret n°2016-230 du 26 février 2016 - art.
+
+	**Modifié par**:
+
+	  - Décret n°2017-892 du 6 mai 2017 - art. 38
