--- a/02. Partie réglementaire/Article R211-11 - 25938497.md
+++ b/02. Partie réglementaire/Article R211-11 - 25938497.md
@@ -1,25 +1,18 @@
 # Article R211-11
 
 A peine d'irrecevabilité, les contestations relatives à la saisie sont formées dans le délai d'un mois à compter de la
-dénonciation de la saisie au débiteur. Sous la même sanction, elles sont dénoncées le même jour, par lettre recommandée avec
-demande d'avis de réception, à l'huissier de justice qui a procédé à la saisie.
+dénonciation de la saisie au débiteur. Sous la même sanction, elles sont dénoncées le même jour ou, au plus tard, le premier
+jour ouvrable suivant, par lettre recommandée avec demande d'avis de réception, à l'huissier de justice qui a procédé à la
+saisie.
 
-L'auteur de la contestation en informe le tiers saisi par lettre simple et en remet une copie, à peine de caducité de
-l'assignation, au greffe du juge de l'exécution au plus tard le jour de l'audience.
+L'auteur de la contestation en informe le tiers saisi par lettre simple. Il remet une copie de l'assignation, à peine de
+caducité de celle-ci , au greffe du juge de l'exécution au plus tard le jour de l'audience.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 66 al. 1 et 2 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
-
-	**Créé par**:
-
-	  - Décret n°2012-783 du 30 mai 2012 - art.
 
 	**Cité par**:
 
@@ -27,3 +20,8 @@ l'assignation, au greffe du juge de l'exécution au plus tard le jour de l'audie
 	  - Décret n°2016-230 du 26 février 2016 - art.
 	  - Code des procédures civiles d'exécution - art. R211-1 (V)
 	  - Code des procédures civiles d'exécution - art. R211-2 (V)
+
+	**Modifié par**:
+
+	  - Décret n°2017-892 du 6 mai 2017 - art. 39
+	  - Décret n°2017-892 du 6 mai 2017 - art. 45
