--- a/02. Partie réglementaire/Article R241-1 - 25938905.md
+++ b/02. Partie réglementaire/Article R241-1 - 25938905.md
@@ -1,34 +1,32 @@
 # Article R241-1
 
-Les dispositions particulières relatives aux autres procédures d'exécution mobilière sont énoncées : 
+Les dispositions particulières relatives aux autres procédures d'exécution mobilière sont énoncées :
 
-1° Par le code des transports ; 
+1° Par le code des transports ;
 
-2° Par le code de l'aviation civile pour la saisie des aéronefs ; 
+2° Par le code de l'aviation civile pour la saisie des aéronefs ;
 
-3° Par le code du domaine public fluvial et de la navigation intérieure pour la saisie des bateaux ; 
+3° Par le code de la propriété intellectuelle pour la saisie en matière de droit de propriété littéraire, artistique et
+industrielle ;
 
-4° Par le code de la propriété intellectuelle pour la saisie en matière de droit de propriété littéraire, artistique et
-industrielle ; 
+4° Par le code rural et de la pêche maritime pour les oppositions à tiers détenteur des mutualités sociales agricoles ;
 
-5° Par le code rural et de la pêche maritime pour les oppositions à tiers détenteur des mutualités sociales agricoles ; 
-
-6° Par le code de la sécurité sociale pour les oppositions à tiers détenteur des caisses de sécurité sociale.
+5° Par le code de la sécurité sociale pour les oppositions à tiers détenteur des caisses de sécurité sociale.
 
 **Liens relatifs à cet article**
 
 	**Modifié par**:
 
-	  - Décret n°2016-1893 du 28 décembre 2016 - art. 3 (V)
+	  - Décret n°2017-892 du 6 mai 2017 - art. 40
 
 	**Cite**:
 
-	  - Code de la propriété intellectuelle (V)
-	  - Code rural et de la pêche maritime (V)
-	  - Code de la sécurité sociale. (V)
-	  - Code de l'aviation civile (V)
-	  - Code du domaine public fluvial et de la navigation intérieure (V)
-	  - Code des transports (V)
+	  - Code de la propriété intellectuelle
+	  - Code rural
+	  - Code de la sécurité sociale.
+	  - Code de l'aviation civile
+	  - Code du domaine public fluvial et de la navigation intérieure
+	  - Code des transports
 
 	**Cité par**:
 
