--- a/02. Partie réglementaire/Article R321-5 - 25938984.md
+++ b/02. Partie réglementaire/Article R321-5 - 25938984.md
@@ -1,7 +1,7 @@
 # Article R321-5
 
-Le créancier poursuivant fait signifier un commandement de payer valant saisie au débiteur principal. L'acte comporte la
-mention que ce commandement est délivré au tiers détenteur. 
+Le créancier poursuivant fait signifier un commandement de payer au débiteur principal. L'acte comporte la mention que le
+commandement de payer valant saisie prévu à l'alinéa ci-après est délivré au tiers détenteur.
 
 Le commandement de payer valant saisie est signifié à la diligence du créancier poursuivant au tiers détenteur. Il comporte
 les mentions énumérées à l'article R. 321-3. Toutefois, l'avertissement prévu au 4° est remplacé par la sommation d'avoir à
@@ -11,24 +11,20 @@ du code civil.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 17 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
-
-	**Créé par**:
-
-	  - Décret n°2012-783 du 30 mai 2012 - art.
 
 	**Cité par**:
 
 	  - Décret n°2016-230 du 26 février 2016 - art.
 
+	**Modifié par**:
+
+	  - Décret n°2017-892 du 6 mai 2017 - art. 42
+
 	**Cite**:
 
-	  - Code civil - art. 2463 (M)
-	  - Code civil - art. 2464 (M)
-	  - Code des procédures civiles d'exécution - art. R321-3 (V)
+	  - Code civil - art. 2463
+	  - Code civil - art. 2464
+	  - Code des procédures civiles d'exécution - art. R321-3
