--- a/02. Partie réglementaire/Article R322-16 - 25939089.md
+++ b/02. Partie réglementaire/Article R322-16 - 25939089.md
@@ -1,25 +1,24 @@
 # Article R322-16
 
-La demande du débiteur tendant à la suspension de la procédure de saisie immobilière en raison de sa situation de
-surendettement est formée dans les conditions prévues par l'article R. 331-11-1 du code de la consommation.
+La demande tendant à la suspension de la procédure de saisie immobilière en raison de la situation de surendettement du
+débiteur est formée conformément aux 
+dispositions de l'article L. 721-4 du code de la consommation
+, dans les conditions prévues à l'article R. 721-5 de ce code.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 50 al. 1 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2017-892 du 6 mai 2017 - art. 43
 
 	**Cite**:
 
-	  - Code de la consommation - art. R331-11-1 (M)
+	  - Code de la consommation - art. L721-4
+	  - Code de la consommation - art. R721-5 (V)
 
 	**Cité par**:
 
