--- a/02. Partie réglementaire/Article R322-28 - 25939119.md
+++ b/02. Partie réglementaire/Article R322-28 - 25939119.md
@@ -1,22 +1,19 @@
 # Article R322-28
 
 La vente forcée ne peut être reportée que pour un cas de force majeure ou sur la demande de la commission de surendettement
-formée en application des articles L. 331-3-1 ou L. 331-5 du code de la consommation.
+formée en application des articles L. 722-4 ou L. 721-7 du code de la consommation.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 61 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2017-892 du 6 mai 2017 - art. 44
 
 	**Cite**:
 
-	  - Code de la consommation - art. L331-3-1 (M)
+	  - Code de la consommation - art. L712-7 (V)
+	  - Code de la consommation - art. L722-4 (V)
