--- a/02. Partie réglementaire/Article R523-9 - 25939480.md
+++ b/02. Partie réglementaire/Article R523-9 - 25939480.md
@@ -3,8 +3,8 @@
 A compter de cette signification, le débiteur dispose d'un délai de quinze jours pour contester l'acte de conversion devant
 le juge de l'exécution du lieu où il demeure. Ce délai est prescrit à peine d'irrecevabilité.
 
-Sous la même sanction, la contestation est dénoncée le même jour, par lettre recommandée avec demande d'avis de réception, à
-l'huissier de justice qui a procédé à la saisie.
+Sous la même sanction, la contestation est dénoncée le même jour ou, au plus tard, le premier jour ouvrable suivant, par
+lettre recommandée avec demande d'avis de réception, à l'huissier de justice qui a procédé à la saisie.
 
 L'auteur de la contestation en informe le tiers saisi par lettre simple.
 
@@ -17,18 +17,14 @@ Cette déclaration doit être constatée par écrit.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 242 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
-
-	  - Décret n°2012-783 du 30 mai 2012 - art.
-
 	**Cité par**:
 
 	  - Décret n°2016-230 du 26 février 2016 - art.
+
+	**Modifié par**:
+
+	  - Décret n°2017-892 du 6 mai 2017 - art. 45
