--- a/02. Partie réglementaire/Article R121-20 - 25938338.md
+++ b/02. Partie réglementaire/Article R121-20 - 25938338.md
@@ -1,24 +1,23 @@
 # Article R121-20
 
-Le délai d'appel est de quinze jours à compter de la notification de la décision.
+Le délai d'appel est de quinze jours à compter de la notification de la décision. 
 
-L'appel est formé, instruit et jugé selon les règles applicables à la procédure avec représentation obligatoire.
-
-La cour d'appel statue à bref délai.
+L'appel est formé, instruit et jugé selon les règles applicables à la procédure prévue à l'article 905 du code de procédure
+civile ou à la procédure à jour fixe.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 29 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2017-891 du 6 mai 2017 - art. 42
+
+	**Cite**:
+
+	  - Code de procédure civile - art. 905 (VD)
 
 	**Cité par**:
 
