--- a/02. Partie réglementaire/Article R131-2 - 25938382.md
+++ b/02. Partie réglementaire/Article R131-2 - 25938382.md
@@ -3,26 +3,22 @@
 Pour l'application de l'article L. 131-3, l'incompétence est relevée d'office par le juge saisi d'une demande en liquidation
 d'astreinte. 
 
-Si ce n'est lorsqu'elle émane d'une cour d'appel, la décision du juge peut faire l'objet d'un contredit formé dans les
-conditions prévues par le code de procédure civile.
+Si ce n'est lorsqu'elle émane d'une cour d'appel, la décision du juge peut faire l'objet d'un appel formé dans les conditions
+prévues par le code de procédure civile.
 
 **Liens relatifs à cet article**
-
-	**Anciens textes**:
-
-	  - Décret n°92-755 du 31 juillet 1992 - art. 52 (Ab)
 
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2017-891 du 6 mai 2017 - art. 6
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. L131-3 (V)
+	  - Code des procédures civiles d'exécution - art. L131-3
 
 	**Cité par**:
 
