--- a/02. Partie réglementaire/Article R311-7 - 25938955.md
+++ b/02. Partie réglementaire/Article R311-7 - 25938955.md
@@ -1,8 +1,8 @@
 # Article R311-7
 
 Les jugements sont, sauf disposition contraire, susceptibles d'appel. L'appel est formé dans un délai de quinze jours à
-compter de la notification qui en est faite. Sous réserve des dispositions de l'article R. 322-19, l'appel est jugé selon la
-procédure prévue à l'article 905 du code de procédure civile. 
+compter de la notification qui en est faite. Sous réserve des dispositions de       l'article R. 322-19 et sauf s'il est
+recouru à la procédure à jour fixe, l'appel est jugé selon la procédure prévue à l'article 905 du code de procédure civile. 
 
 La notification des décisions est faite par voie de signification. Toutefois, lorsqu'en vertu d'une disposition particulière
 le juge de l'exécution statue par ordonnance rendue en dernier ressort, sa décision est notifiée par le greffe simultanément
@@ -13,24 +13,20 @@ Les jugements statuant sur les contestations ou les demandes incidentes ne sont 
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°2006-936 du 27 juillet 2006 - art. 8 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2017-891 du 6 mai 2017 - art. 42
 
 	**Cite**:
 
-	  - Code de procédure civile - art. 905 (Ab)
-	  - Code des procédures civiles d'exécution - art. R311-11 (V)
-	  - Code des procédures civiles d'exécution - art. R321-21 (V)
-	  - Code des procédures civiles d'exécution - art. R322-19 (V)
+	  - Code de procédure civile - art. 905
+	  - Code des procédures civiles d'exécution - art. R311-11
+	  - Code des procédures civiles d'exécution - art. R321-21
+	  - Code des procédures civiles d'exécution - art. R322-19
 
 	**Cité par**:
 
