--- a/02. Partie réglementaire/Article R641-1 - 25939632.md
+++ b/02. Partie réglementaire/Article R641-1 - 25939632.md
@@ -5,6 +5,10 @@ code sont applicables à Wallis-et-Futuna :
 
 1° Le livre Ier, à l'exception du second alinéa de l'article R. 112-4, des articles R. 162-2, R. 162-3 et R. 162-7 ; 
 
+Les articles R. 121-20 et R. 131-2 dans leur rédaction résultant du décret n° 2017-891 du 6 mai 2017. 
+
+Les dispositions du décret n° 2017-891 du 6 mai 2017 abrogeant l'article R. 121-3 sont applicables à Wallis-et-Futuna. 
+
 2° Le livre II, à l'exception du 4° de l'article R. 211-3 et des 3°, 5° et 6° de l'article R. 241-1 ; 
 
 3° Le livre IV, à l'exception du 2° de l'article R. 451-1 et de l'article R. 451-4 ; 
@@ -14,27 +18,24 @@ les immeubles et les fonds de commerce et R. 533-2.
 
 **Liens relatifs à cet article**
 
-	**Anciens textes**:
-
-	  - Décret n°73-216 du 1 mars 1973 - art. 10 (Ab)
-	  - Décret n°92-755 du 31 juillet 1992 - art. 303-1 (Ab)
-
 	**Codifié par**:
 
 	  - Décret n°2012-783 du 30 mai 2012 (V)
 
-	**Créé par**:
+	**Modifié par**:
 
-	  - Décret n°2012-783 du 30 mai 2012 - art.
+	  - Décret n°2017-891 du 6 mai 2017 - art. 51
 
 	**Cite**:
 
-	  - Code des procédures civiles d'exécution - art. R112-4 (V)
-	  - Code des procédures civiles d'exécution - art. R162-2 (V)
-	  - Code des procédures civiles d'exécution - art. R211-3 (VT)
-	  - Code des procédures civiles d'exécution - art. R241-1 (V)
-	  - Code des procédures civiles d'exécution - art. R451-1 (V)
-	  - Code des procédures civiles d'exécution - art. R451-4 (V)
-	  - Code des procédures civiles d'exécution - art. R523-3 (V)
-	  - Code des procédures civiles d'exécution - art. R532-1 (V)
-	  - Code des procédures civiles d'exécution - art. R533-2 (V)
+	  - Code des procédures civiles d'exécution - art. R112-4
+	  - Code des procédures civiles d'exécution - art. R121-20 (VD)
+	  - Code des procédures civiles d'exécution - art. R131-2 (VD)
+	  - Code des procédures civiles d'exécution - art. R162-2
+	  - Code des procédures civiles d'exécution - art. R211-3
+	  - Code des procédures civiles d'exécution - art. R241-1
+	  - Code des procédures civiles d'exécution - art. R451-1
+	  - Code des procédures civiles d'exécution - art. R451-4
+	  - Code des procédures civiles d'exécution - art. R523-3
+	  - Code des procédures civiles d'exécution - art. R532-1
+	  - Code des procédures civiles d'exécution - art. R533-2
