--- a/01. Partie législative/Article L412-5 - 25026045.md
+++ b/01. Partie législative/Article L412-5 - 25026045.md
@@ -8,8 +8,15 @@ demande de relogement au titre du droit au logement opposable. A défaut de sais
 département par l'huissier, le délai avant l'expiration duquel l'expulsion ne peut avoir lieu est suspendu. 
 
 La saisine du représentant de l'Etat dans le département par l'huissier et l'information de la commission de coordination des
-actions de prévention des expulsions locatives par le représentant de l'Etat dans le département peuvent s'effectuer par voie
-électronique, selon des modalités fixées par décret.
+actions de prévention des expulsions locatives par le représentant de l'Etat dans le département s'effectuent par voie
+électronique par l'intermédiaire du système d'information prévu au dernier alinéa du même article 7-2.
+
+**Nota:**
+
+Loi n° 2017-86 du 27 janvier 2017 art. 152-III : Ces dispositions entrent en vigueur à la date de mise en œuvre
+opérationnelle des modules concernés du système d'information prévu au dernier alinéa de l'article 7-2 de la loi n° 90-449 du
+31 mai 1990 visant à la mise en œuvre du droit au logement, qui est fixée par arrêté du ministre de l'intérieur, et au plus
+tard le 31 décembre 2017.
 
 **Liens relatifs à cet article**
 
@@ -27,4 +34,4 @@ actions de prévention des expulsions locatives par le représentant de l'Etat d
 
 	**Modifié par**:
 
-	  - Loi n°2014-366 du 24 mars 2014 - art. 28
+	  - Loi n°2017-86 du 27 janvier 2017 - art. 152 (V)
